--- a/tasks/Linux/prerequisites.yml
+++ b/tasks/Linux/prerequisites.yml
@@ -1,8 +1,15 @@
 ---
 - name: Check the number of available CPUs
   assert:
-    that: ansible_processor_vcpus > 2
+    that:
+      - ansible_processor_vcpus >= 2
     msg: "the number of available CPUs {{ ansible_processor_vcpus }} is less than the required 2"
+
+- name: Check the size of total Memory
+  assert:
+    that:
+      - ansible_memtotal_mb / 1024 >= 2
+    msg: "the size of total Memory {{ ansible_memtotal_mb / 1024 }} is less than the required 2GB"
 
 - name: Disable Swap
   shell: swapoff -a
