--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,27 @@
 kubernetes_apt_repository: "deb http://apt.kubernetes.io/ kubernetes-xenial main"
 
 kubernetes_role: master
+
+# kubernetes_version: "v1.18.0"
+# kubernetes_apiserver_advertise_address: "192.168.12.12"
+kubernetes_kubeadm_init_extra_opts: ""
+kubernetes_join_command_extra_opts: ""
+
+kubernetes_allow_pods_on_master: true
+
+kubernetes_pod_network:
+  # Flannel CNI.
+  cni: "flannel"
+  cidr: "10.244.0.0/16"
+  # Calico CNI.
+  # cni: 'calico'
+  # cidr: '192.168.0.0/16'
+
+kubernetes_apiserver_advertise_address: ""
+
+# Flannel config files.
+kubernetes_flannel_manifest_file_rbac: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/k8s-manifests/kube-flannel-rbac.yml
+kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+
+# Calico config files
+kubernetes_calico_manifest_file: https://docs.projectcalico.org/v3.10/manifests/calico.yaml
