--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -1,11 +1,16 @@
 ---
-# - name: Initialize Kubernetes master with kubeadm init.
-#   command: >
-#     kubeadm init
-#     --pod-network-cidr={{ kubernetes_pod_network.cidr }}
-#     --apiserver-advertise-address={{ kubernetes_apiserver_advertise_address | default(ansible_default_ipv4.address, true) }}
-#     --kubernetes-version {{ kubernetes_version_kubeadm }}
-#     --ignore-preflight-errors={{ kubernetes_ignore_preflight_errors }}
-#     {{ kubernetes_kubeadm_init_extra_opts }}
-#   register: kubeadmin_init
-#   when: not kubernetes_init_stat.stat.exists
+- name: Initialize Kubernetes master with kubeadm init
+  command: >
+    kubeadm init
+    --pod-network-cidr={{ kubernetes_pod_network.cidr }}
+    {% if kubernetes_apiserver_advertise_address is defined %}
+    --apiserver-advertise-address={{ kubernetes_apiserver_advertise_address }}
+    {% endif %}
+    {% if kubernetes_version is defined %}
+    --kubernetes-version {{ kubernetes_version }}
+    {% endif %}
+    {{ kubernetes_kubeadm_init_extra_opts }}
+  register: kubeadmin_init
+  when: not kubernetes_init_stat.stat.exists
+
+- debug: msg="{{ kubeadmin_init }}"
