--- a/tasks/Linux/setup-Debian.yml
+++ b/tasks/Linux/setup-Debian.yml
@@ -21,7 +21,7 @@
     update_cache: true
   become: true
 
-- name: Install Kubernetes
+- name: Install Kubernetes packages
   apt:
     name:
       - kubelet
