--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,4 +24,4 @@ kubernetes_allow_pods_on_master: true
 kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
 # Calico config files
-kubernetes_calico_manifest_file: https://docs.projectcalico.org/v3.10/manifests/calico.yaml
+kubernetes_calico_manifest_file: https://docs.projectcalico.org/manifests/calico.yaml
