--- a/tasks/Linux/prerequisites.yml
+++ b/tasks/Linux/prerequisites.yml
@@ -22,18 +22,18 @@
     replace: '# \1'
   become: true
 
-- name: Copy Docker daemon config file
-  template:
-    src: daemon.json.j2
-    dest: /etc/docker/daemon.json
-    owner: root
-    group: root
-    mode: 0644
-  become: true
+# - name: Copy Docker daemon config file
+#   template:
+#     src: daemon.json.j2
+#     dest: /etc/docker/daemon.json
+#     owner: root
+#     group: root
+#     mode: 0644
+#   become: true
 
-- name: Restart Docker
-  systemd:
-    name: docker
-    state: restarted
-    daemon_reload: true
-  become: true
+# - name: Restart Docker
+#   systemd:
+#     name: docker
+#     state: restarted
+#     daemon_reload: true
+#   become: true
