--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -8,7 +8,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: Check if Kubernetes has already been initialized
-  raw: test -e /etc/kubernetes/admin.conf && echo true || echo false
+  shell: test -e /etc/kubernetes/admin.conf && echo true || echo false
   register: kubernetes_init_stat
 
 # Set up master.
