--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -9,8 +9,11 @@
 
 - name: Check if Kubernetes has already been initialized
   shell: test -e /etc/kubernetes/admin.conf && echo true || echo false
+  changed_when: false
   register: kubernetes_init_stat
 
+- debug: msg="{{ kubernetes_init_stat }}"
+
 # Set up master.
-- include_tasks: master-setup.yml
-  when: kubernetes_role == 'master'
+# - include_tasks: master-setup.yml
+#   when: kubernetes_role == 'master'
