--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -13,5 +13,5 @@
   register: kubernetes_init_stat
 
 # Set up master.
-- include_tasks: master-setup.yml
-  when: kubernetes_role == 'master'
+# - include_tasks: master-setup.yml
+#   when: kubernetes_role == 'master'
