--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -12,6 +12,7 @@
   changed_when: false
   register: kubernetes_init_stat
 
+- debug: msg="{{ kubernetes_init_stat }}"
 # Set up master.
 # - include_tasks: master-setup.yml
 #   when: kubernetes_role == 'master'
