--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -8,9 +8,12 @@
   when: ansible_os_family == 'Debian'
 
 - name: Check if Kubernetes has already been initialized
-  shell: test -e /etc/kubernetes/admin.conf && echo true || echo false
-  changed_when: false
+  stat:
+    path: /etc/kubernetes/admin.conf
   register: kubernetes_init_stat
+
+- set_fact:
+  kubernetes_init_stat: "{{ kubernetes_init_stat.stat.exists }}"
 
 # Set up master.
 - include_tasks: master-setup.yml
