--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -18,6 +18,9 @@
   when: not kubernetes_init_stat.stat.exists
 
 - name: Print the init output to screen
+  debug: msg="{{ kubeadmin_init }}"
+
+- name: Print the init output to screen
   debug:
     var: kubeadmin_init.stdout
     verbosity: 2
