--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -1,10 +1,10 @@
 ---
 - import_tasks: prerequisites.yml
 
-- import_tasks: setup-RedHat.yml
+- include_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
-- import_tasks: setup-Debian.yml
+- include_tasks: setup-Debian.yml
   when: ansible_os_family == 'Debian'
 
 - name: Check if Kubernetes has already been initialized
