--- a/tasks/Linux/config-flannel.yml
+++ b/tasks/Linux/config-flannel.yml
@@ -16,6 +16,6 @@
 - name: Update flannel manifest file
   shell: >
     grep -q '^\s*- --iface=' /tmp/{{ kubernetes_flannel_manifest_file | basename }} &&
-    sed -i "s|^\(\s*\)- --iface=.*|\1- --iface=$iface|g" /tmp/{{ kubernetes_flannel_manifest_file | basename }} ||
-    sed -i '/^\(\s*\)- --kube-subnet-mgr/a \
-      - --iface='$iface /tmp/{{ kubernetes_flannel_manifest_file | basename }}
+      sed -i 's|^\(\s*\)- --iface=.*|\1- --iface={{ iface_result.stdout }}|g' /tmp/{{ kubernetes_flannel_manifest_file | basename }} ||
+      sed -i '/^\(\s*\)- --kube-subnet-mgr/a \
+      - --iface={{ iface_result.stdout }}' /tmp/{{ kubernetes_flannel_manifest_file | basename }}
