--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ kubernetes_apt_repository: "deb http://apt.kubernetes.io/ kubernetes-xenial main
 
 kubernetes_role: master
 
-# kubernetes_version: "v1.18.0"
+kubernetes_version: latest
 # kubernetes_apiserver_advertise_address: "192.168.12.12"
 # kubernetes_ignore_preflight_errors: "all"
 kubernetes_kubeadm_init_extra_opts: ""
