--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -23,16 +23,20 @@
   when: not kubernetes_init_stat.stat.exists
 
 - name: Setup kubeconfig for root user
-  command: |
+  shell: |
     mkdir -p $HOME/.kube
     ln -sf /etc/kubernetes/admin.conf $HOME/.kube/config
+  args:
+    warn: false
   become: true
 
 - name: Setup kubeconfig for current user
-  command: |
+  shell: |
     mkdir -p $HOME/.kube
     sudo cp -f /etc/kubernetes/admin.conf $HOME/.kube/config
     sudo chown $(id -u):$(id -g) $HOME/.kube/config
+  args:
+    warn: false
   when: set_kubeconfig_for_current_user | bool
 
 # 如果Node有多个网卡的话，参考flannel issues 39701，
