--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -59,16 +59,18 @@
     - not kubernetes_init_stat.stat.exists
   become: true
 
-- name: Check if Helm is installed
-  stat:
-    path: "/usr/local/bin/helm"
+- name: Check is Helm installed
+  shell: command -v helm >/dev/null 2>&1
   register: helm_is_installed
+  ignore_errors: yes
 
 - name: Gather currently installed Helm version
-  shell: /usr/local/bin/helm version --client | awk -F'"' '{print $2}'
+  shell: helm version --client | awk -F'"' '{print $2}'
   changed_when: false
   register: helm_current_version
-  when: helm_is_installed.stat.exists
+  when: helm_is_installed.rc == 0
 
-- import_tasks: helm_init.yml
-  when: helm_current_version.stdout.split('.')[0] == 'v2'
+- import_tasks: install-tiller.yml
+  when:
+    - helm_is_installed.rc == 0
+    - helm_current_version.stdout.split('.')[0] == 'v2'
