--- a/tasks/Linux/setup-Debian.yml
+++ b/tasks/Linux/setup-Debian.yml
@@ -24,8 +24,8 @@
 - name: Install Kubernetes packages
   apt:
     name:
-      - kubelet
-      - kubeadm
-      - kubectl
+      - kubelet{% if kubernetes_version != 'latest' %}={{ kubernetes_version }}*{% endif %}
+      - kubeadm{% if kubernetes_version != 'latest' %}={{ kubernetes_version }}*{% endif %}
+      - kubectl{% if kubernetes_version != 'latest' %}={{ kubernetes_version }}*{% endif %}
     state: present
   become: true
