--- a/tasks/Linux/setup-Debian.yml
+++ b/tasks/Linux/setup-Debian.yml
@@ -29,3 +29,14 @@
       - kubectl{% if kubernetes_version != 'latest' %}={{ kubernetes_version }}*{% endif %}
     state: present
   become: true
+
+- name: Prevent Kubernetes packages from being upgraded
+  dpkg_selections:
+    name: "{{ kube_pkg }}"
+    selection: hold
+  with_items:
+    - kubelet
+    - kubeadm
+    - kubectl
+  loop_control:
+    loop_var: kube_pkg
