--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -43,11 +43,12 @@
 
 - name: Wait for Kubernetes running
   shell: kubectl cluster-info | grep 'Kubernetes master' | grep -q 'running'
-  register: result
   retries: 3
   delay: 2
+  register: result
   until: result.rc == 0
   changed_when: false
+  become: true
 
 - import_tasks: config-flannel.yml
   when:
