--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -84,7 +84,7 @@
     - helm_is_installed.rc == 0
     - helm_current_version.stdout.split('.')[0] == 'v2'
 
-- name: Install pip packages depends on helm module
+- name: Install pip packages dependent by helm module
   pip:
     name:
       - pyhelm
@@ -94,7 +94,6 @@
 
 - name: Install hostpath-provisioner
   helm:
-    host: localhost
     chart:
       name: hostpath-provisioner
       version: 0.2.9
@@ -105,4 +104,4 @@
     name: hostpath-provisioner
     namespace: kube-system
   become: true
-  where: "'hostpath-provisioner' in kubernetes_components"
+  #where: "'hostpath-provisioner' in kubernetes_components"
