--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -84,30 +84,5 @@
     - helm_is_installed.rc == 0
     - helm_current_version.stdout.split('.')[0] == 'v2'
 
-- name: Ensure pip3 is installed
-  apt:
-    name: python3-pip
-    state: present
-  become: true
-
-- name: Install pip packages dependent by helm module
-  pip:
-    name:
-      - pyhelm
-      - grpcio
-    state: present
-    executable: pip3
-  become: true
-
-- name: Install hostpath-provisioner
-  helm:
-    chart:
-      name: hostpath-provisioner
-      source:
-        type: repo
-        location: https://charts.rimusz.net
-    state: present
-    name: hostpath-provisioner
-    namespace: kube-system
-  become: true
-  #where: "'hostpath-provisioner' in kubernetes_components"
+- import_tasks: install-hostpath-provisioner.yml
+  when: kubernetes_install_hostpath_provisioner | bool
