--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -1,17 +1,17 @@
 ---
 - name: Check if hostpath-provisioner is installed
-  command: helm status hostpath-provisioner >/dev/null 2>&1
+  shell: helm status hostpath-provisioner >/dev/null 2>&1
   register: helm_status
   ignore_errors: yes
   changed_when: false
   become: true
 
 - name: Add rimusz Helm repo
-  command: helm repo add rimusz https://charts.rimusz.net
+  shell: helm repo add rimusz https://charts.rimusz.net
   become: true
 
 - name: Install hostpath-provisioner
-  command: >
+  shell: >
     helm install --name hostpath-provisioner rimusz/hostpath-provisioner
       --namespace kube-system
   when: helm_status.rc != 0
