--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -2,16 +2,19 @@
 - name: Check if hostpath-provisioner is installed
   shell: helm status hostpath-provisioner >/dev/null 2>&1
   register: helm_status
+  no_log: true
   ignore_errors: yes
   changed_when: false
   become: true
 
-- name: Add rimusz Helm repo
+- name: Add rimusz helm repo
   shell: helm repo add rimusz https://charts.rimusz.net
   become: true
 
-- name: Install hostpath-provisioner
-  shell: >
-    helm install --name hostpath-provisioner rimusz/hostpath-provisioner
-      --namespace kube-system
-  when: helm_status.rc != 0
+- name: Update helm repo
+  shell: helm repo update
+  become: true
+# - name: Install hostpath-provisioner
+#   shell: >
+#     helm install --name hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system
+#   when: helm_status.rc != 0
