--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -1,20 +1,21 @@
 ---
 - name: Check if hostpath-provisioner is installed
-  shell: helm list hostpath-provisioner --deployed | grep -q hostpath-provisioner
+  shell: helm list hostpath-provisioner --deployed
   register: helm_status
-  ignore_errors: yes
   changed_when: false
   become: true
 
-- block:
-    - name: Add rimusz helm repo
-      shell: helm repo add rimusz https://charts.rimusz.net
-      become: true
+- debug: msg="{{ helm_status }}"
 
-    - name: Update helm repo
-      shell: helm repo update
-      become: true
-  when: helm_status.rc != 0
+# - block:
+#     - name: Add rimusz helm repo
+#       shell: helm repo add rimusz https://charts.rimusz.net
+#       become: true
+
+#     - name: Update helm repo
+#       shell: helm repo update
+#       become: true
+#   when: helm_status.rc != 0
 # - name: Install hostpath-provisioner
 #   shell: >
 #     helm install --name hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system
